--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="row gy-5 aos-init aos-animate">
         <div class="col-lg-7  order-lg-1 d-flex flex-column justify-content-start text-left caption">
           <h2 data-aos="fade-up">Wir erstellen Pro-Websites für Kunden 
-            <span>in ganz Deutschland.</span><span class="circle" data-aos="fade-right" data-aos-delay="800">.</span></h2>
+            <span>in ganz Berlin  </span><span class="circle" data-aos="fade-right" data-aos-delay="800">.</span></h2>
           <p data-aos="fade-up" data-aos-delay="400">Website für dein Business  gestalten und loslegen.
           </p>
           <div class="social" data-aos="fade-up" data-aos-delay="600">
